--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,18 +1,4 @@
 .hero {
-    text-align: center;
-
-    @media screen and (min-width: $mobile) {
-        padding-top: 118px;
-        padding-bottom: 118px;
-    }
-
-    @media screen and (min-width: $desktop) {
-        padding-top: 200px;
-        padding-bottom: 200px;
-    }
-}
-
-.hero__overlay {
     max-width: 1600px;
     height: 400px;
     margin-left: auto;
@@ -21,19 +7,36 @@
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url("../images/hero-bg-image.jpg");
+        url("../../images/hero-bg-image.jpg");
+    /*
+    image-set('../images.hero-bg-image.jpg' 1x, '../images.hero-bg-image@2x.jpg' 2x);
+    */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    
+    @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient(to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)),
+            url("../../images/hero-bg-image@2x.jpg");
+    }
 
-    @media screen and (min-width: $mobile) {
+    text-align: center;
+    align-content: center;
 
-       
+    @media screen and (max-width: 1199px) {
+        width: 100%;
+        padding-top: 118px;
+        padding-bottom: 118px;
     }
 
     @media screen and (min-width: $desktop) {
-
         height: 600px;
+        padding-top: 200px;
+        padding-bottom: 200px;
     }
 }
 
