--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -7,7 +7,7 @@
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url("../../images/hero-bg-image.jpg");
+        url("../images/hero-bg-image.jpg");
     /*
     image-set('../images.hero-bg-image.jpg' 1x, '../images.hero-bg-image@2x.jpg' 2x);
     */
@@ -21,7 +21,7 @@
         background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-            url("../../images/hero-bg-image@2x.jpg");
+            url("../images/hero-bg-image@2x.jpg");
     }
 
     text-align: center;
