--- a/css/main.css
+++ b/css/main.css
@@ -483,7 +483,7 @@ body.modal-open {
   text-transform: uppercase;
   color: #ffffff;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 1199px) {
   .hero__title {
     font-size: 26px;
     line-height: 1.6153846154;
