--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -47,7 +47,7 @@
     text-transform: uppercase;
     color: $hero-text-color;
 
-    @media screen and (min-width: $mobile) {
+    @media screen and (max-width: 1199px) {
         font-size: 26px;
         line-height: calc(42 / 26);
     }
