--- a/css/main.css
+++ b/css/main.css
@@ -438,7 +438,7 @@ body.modal-open {
 }
 
 .hero {
-  max-width: 1600px;
+  width: 100%;
   height: 400px;
   margin-left: auto;
   margin-right: auto;
@@ -463,13 +463,13 @@ body.modal-open {
 }
 @media screen and (max-width: 1199px) {
   .hero {
-    width: 100%;
     padding-top: 118px;
     padding-bottom: 118px;
   }
 }
 @media screen and (min-width: 1200px) {
   .hero {
+    max-width: 1600px;
     height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
@@ -535,6 +535,7 @@ body.modal-open {
 
 .modal {
   position: relative;
+  margin: 94px 15px;
   border-radius: 4px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
@@ -772,10 +773,10 @@ body.modal-open {
   }
 }
 
+.features__item {
+  width: 100%;
+}
 @media screen and (max-width: 767px) {
-  .features__item {
-    width: 100%;
-  }
   .features__item:not(:last-child) {
     margin-bottom: 30px;
   }
