--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,7 +1,7 @@
 .backdrop {
-            position: fixed;
-                top: 0;
-                left: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     opacity: 1;
@@ -18,10 +18,11 @@
 
 .modal {
     position: relative;
-        border-radius: 4px;
-        background-color: $background-color;
-        box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
-            0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    margin: 94px 15px;
+    border-radius: 4px;
+    background-color: $background-color;
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 
     @media screen and (min-width: $tablet) {
         width: 450px;
@@ -33,8 +34,8 @@
     }
 
     @media screen and (min-width: $desktop) {
-            width: 528px;
-            height: 581px;
+        width: 528px;
+        height: 581px;
     }
 }
 
