--- a/css/main.css
+++ b/css/main.css
@@ -173,6 +173,9 @@ body.modal-open {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -350,6 +353,8 @@ body.modal-open {
 }
 .menu__btn.is-open .icon__cross {
   display: block;
+  margin-top: 10px;
+  margin-right: 15px;
 }
 .menu__btn.is-open .icon__menu {
   display: none;
@@ -410,6 +415,11 @@ body.modal-open {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -422,7 +432,7 @@ body.modal-open {
 }
 
 .social-menu__item:not(:last-child) {
-  border-left: 1px solid rgba(33, 33, 33, 0.2);
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .social-menu__link {
