--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -27,10 +27,37 @@
     text-align: center;
     align-content: center;
 
-    @media screen and (max-width: 1199px) {
+    @media screen and (max-width: $mobile) {
+        background-image: linear-gradient(to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)),
+            url("../images/hero-bg-image-mobile.jpg");
 
-        padding-top: 118px;
-        padding-bottom: 118px;
+        @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: linear-gradient(to right,
+                        rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url("../images/hero-bg-image-mobile@2x.jpg");
+            }
+    }
+
+    @media screen and (min-width: 481px) and (max-width: $tablet) {
+        
+        background-image: linear-gradient(to right,
+                    rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                url("../images/hero-bg-image-tablet.jpg");
+        
+            @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: linear-gradient(to right,
+                        rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url("../images/hero-bg-image-tablet@2x.jpg");
+            }
     }
 
     @media screen and (min-width: $desktop) {
