--- a/css/main.css
+++ b/css/main.css
@@ -370,7 +370,7 @@ body.modal-open {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     padding: 48px 40px;
   }
