--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -192,7 +192,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 100vw;
+        width: 100%;
         height: 100vh;
         padding: 48px 40px;
         
